Tue Jan 13 12:31:54 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* tool/file2lastrev.rb (get_revisions): fixes problem with
	  svn on cygwin. [ruby-dev:37702].
	  Patch by Kouhei Sutou.

Tue Jan 13 11:58:04 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* lib/irb/input-method.rb: IRB did not prompt for MSwin32.
	  [ruby-dev:37686].
	  Patch by arton <artonx AT yahoo.co.jp>.

Tue Jan 13 12:10:42 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/{getaddrinfo,getnameinfo}.c: need to include ws2tcpip.h
	  on Windows.

Tue Jan 13 03:07:28 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* instruby.rb: require "tool/mdoc2man.rb" before chdir if needed.

Tue Jan 13 02:54:54 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/extconf.rb: use headers instead of "netdb.h" in checking
	  getnameinfo() and getaddrinfo() because Windows doesn't have it.
	  see [ruby-dev:37757].

	* ext/socket/sockport.h (SA_LEN): use sockaddr_in6 when defined AF_INET6
	  if INET6 is not defined.  winsock2's getaddrinfo() returns
	  sockaddr_in6 if ipv6 is available.

Wed Jan 14 13:19:21 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_w32_aspawn): should not escape with carret
	  unless using cmd.exe.

Tue Jan 13 02:21:43 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (internal_cmd_match): extracted from
	  is_internal_cmd.

	* win32/win32.c (argv_size, join_argv): escapes redirection, pipe
	  and carret punctuations with carrets.

	* win32/win32.c (rb_w32_aspawn): ditto, and redirections and pipe
	  have no meanings.

Tue Jan 13 02:07:38 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: use Encoding.find("locale") instead of
	  Encoding.locale_charmap

Tue Jan 13 00:57:56 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/socket.c (sock_s_unpack_sockaddr_in): check too short
	  sockaddr.
	  (sock_s_unpack_sockaddr_un): ditto.

Mon Jan 12 17:23:05 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
